# pysatl-nmvm

./: =1.0.0  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/workflows/: main.yaml
docs/: conf.py  index.rst  jupiter_examples.rst  modules.rst  src.algorithms.rst  src.generators.rst  src.mixtures.rst  src.register.rst  src.rst  tests.algorithms.nmv_algorithms.rst  tests.mixtures.nm_mixture.rst  tests.mixtures.nmv_mixture.rst  tests.mixtures.rst  text.rst
docs/source/: conf.py  index.rst  src.algorithms.param_algorithms.nm_param_algorithms.rst  src.algorithms.param_algorithms.nvm_param_algorithms.rst  src.algorithms.semiparam_algorithms.nvm_semi_param_algorithms.rst  src.mixtures.rst
jupiter_examples/: mixing_density_experiments_new.ipynb  nm_g_validation.ipynb  nm_sigma_estimation_comparison.ipynb  nmv_g_validation.ipynb  nmv_mu_validation.ipynb  nmv_semiparametric_mixing_density_estimation_given_mu.ipynb  nv_mixing_density.ipynb
jupyter_examples/: MLE Analysis of Bitcoin Data via PySATL-NMVM.ipynb  nm_sigma_validation.ipynb
jupyter_examples/data/: bitcoin_example.csv
src/algorithms/: __init__.py
src/estimators/: abstract_estimator.py  estimate_result.py
src/generators/: abstract_generator.py  nm_generator.py  nmv_generator.py  nv_generator.py
src/jupyter_examples/: NumCharteristics.ipynb  SemiparametricNVM.ipynb
src/mixtures/: abstract_mixture.py  nm_mixture.py  nmv_mixture.py  nv_mixture.py
src/procedures/: __init__.py
src/pysatl_nmvm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+157 files in other folders)
