[metadata]
name = "PySATL_NMVM_Module"
author = "Engelsgeduld, Andreev Sergey, Sazonova Irina"
url = "https://github.com/Engelsgeduld/PySATL_NMVM_Module"

[tool.ruff]
line-length = 120
target-version = "py312"
extend-include = ["*.ipynb"]
format = { quote-style = "double" }

[tool.ruff.lint]
select = [
    "E", "F", "W", "I",
    "UP", "C90",
    "NPY", "PD", "RUF"
]
ignore-init-module-imports = true

[tool.mypy]
files = ["src"]
exclude = ".*\\.ipynb"
install_types = "True"
non_interactive = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
show_error_codes = "True"
warn_redundant_casts = "True"
warn_unused_configs = "True"
warn_unused_ignores = "True"
allow_redefinition = "True"
warn_no_return = "False"
no_implicit_optional = "False"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--color=yes", "-s"]
markers = ["ci: test that run on ci"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
jupyter = "^1.0.0"
pytest = "^7.4.4"
mypy = "^1.10.0"
ipykernel = "^6.29.4"

[project]
name = "pysatl-nmvm-module"
version = "0.1.0"
description = ""
authors = [
    {name = "Kirill-maker",email = "kirill.lukin.1999@bk.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" }
]
